# bk_demo

./: .gitignore  CMakeLists.txt  README.md  build_and_update.sh  install_build_dependencies.sh  perform_ADP_release_update.sh
applied/: BUILD  CMakeLists.txt  WORKSPACE  customer_interface_glue.cc  customer_stack_base.cc  customer_stack_base.h  stack_interface_c_v1_1.h  stack_interface_c_v2.h
applied/include/: api.h  protos.h  spectral_utils.h  transforms.h
applied/simian/public/: BUILD  api_def.h  proto_def.cc  proto_def.h
applied/simian/public/fmu/: BUILD  fmu_manager.cc  fmu_manager.h
applied/simian/public/map/: BUILD  simian_map_client.cc  simian_map_client.h
applied/simian/public/modules/transforms/: BUILD  eigen.h  map_util.cc  map_util.h  planar.cc  planar.h  proto_conversion.cc  proto_conversion.h  scalar.cc  scalar.h  spatial.cc  spatial.h  transform_forest.cc  transform_forest.h
applied/simian/public/osi3/: BUILD  osi_common.proto  osi_environment.proto  osi_groundtruth.proto  osi_lane.proto  osi_object.proto  osi_occupant.proto  osi_roadmarking.proto  osi_sentinel.proto  osi_trafficlight.proto  osi_trafficsign.proto  osi_version.proto
applied/simian/public/proto/: BUILD  access_control.proto  actor.proto  actuation_config.proto  common.proto  composite_vehicle.proto  controller.proto  custom_actor.proto  customer_service.proto  damping_model.proto  dataset.proto  drawing.proto  drives.proto  ego.proto  environment.proto  external_control_service.proto  field_options.proto  fmu_config.proto  function_mapping.proto  geometry.proto  helix_common.proto  integration_definition_compiled.proto  interactive_field.proto  kubernetes_config.proto  map_config.proto  motion_command_sequencer.proto  motion_model.proto  motion_state_modifier.proto  orbis_config.proto  osc_import_config.proto  perception.proto  physics_engine.proto  plan_item.proto  planar.proto  plugin.proto  plugin_schema.proto  public_log_search_service.proto  public_map_service.proto  public_query_service.proto  public_queue_service.proto  (+26 more)
applied/simian/public/proto/map/: BUILD  map.proto  map_clear_area.proto  map_common.proto  map_crosswalk.proto  map_enums.proto  map_geometry.proto  map_id.proto  map_junction.proto  map_lane.proto  map_lane_markings.proto  map_line.proto  map_parking_space.proto  map_region.proto  map_road.proto  map_road_marking.proto  map_semantic.proto  map_sidewalk.proto  map_sign.proto  map_signal.proto  map_signal_control_states.proto  map_speed_bump.proto  map_traversable_surface.proto  map_validation.proto  procedural_map.proto
applied/simian/public/proto/routing/: BUILD  error_code.proto  header.proto  routing.proto
applied/simian/public/proto/scenario/: BUILD  common.proto  scenario_digest.proto  sensor_config.proto  simulink_config.proto  vehicle_config.proto  vehiclesim_config.proto
applied/simian/public/proto/sensor_sim/: BUILD  asset_tags.proto  basic_types.proto  camera_model.proto  fragment_description.proto  image_mapping.proto  imported_vehicle_description.proto  keypoints.proto  labels.proto  mesh_description.proto  model_output.proto  model_spec.proto  models.proto  pedestrian_props.proto  sensor_behavior.proto  spectral_map_config.proto  spectral_materials.proto  spectral_rendering.proto
applied/simian/public/proto/sensor_sim/materials/: BUILD  common_material_properties.proto  lane_line_material.proto  material_description.proto  object_material.proto  surface_material.proto
applied/simian/public/proto/sensor_sim/pedestrians/: BUILD  animations.proto  body.proto  clothing.proto  spectral_pedestrian.proto
applied/simian/public/proto/v2/: BUILD  customer_service_v2.proto  io.proto
applied/simian/public/ros_helpers/: BUILD  adapters.cc  adapters.h  bag_writer.cc  bag_writer.h
applied/simian/public/simulink/: BUILD  compatibility.h  ip_addr_validator.cc  ip_addr_validator.h  simulink_bridge_manager.cc  simulink_bridge_manager.h  simulink_interface_helper.cc  simulink_interface_helper.h  simulink_version.h  zmq_services.cc  zmq_services.h
applied/simian/public/simulink/simulink_automator/: BUILD  simulink_automator_core.cc  simulink_automator_core.h
applied/simian/public/simulink/simulink_global_proto/: BUILD  global_simulink_proto.cc  global_simulink_proto.h
applied/simian/public/utils/: BUILD  optional.h  string_view.h
applied/spectral/public/: BUILD  depth_image_projector.cc  depth_image_projector.h  extra_data_helpers.h  image_helpers.cc  image_helpers.h  image_point.cc  image_point.h  image_projector.cc  image_projector.h  image_projector_impl.cc  image_projector_impl.h  label_visualization.cc  label_visualization.h  lidar_helpers.cc  lidar_helpers.h  lidar_point.h  mmap_region.cc  mmap_region.h  ndarray_helpers.cc  ndarray_helpers.h  radar_helpers.cc  radar_helpers.h  radar_point.h  ros_helpers.cc  ros_helpers.h  scoped_descriptor.h  spectral_shared_memory_helper.cc  spectral_shared_memory_helper.h  utils.cc  utils.h
applied/tools/: applied_deps.bzl  applied_extra_deps.bzl  applied_opencv_deps.bzl  applied_proto_extra_deps.bzl  protos.bzl
docker/: Dockerfile  adduser.sh  build.sh  common.sh  into.sh  protobuf_position_independent_code.patch  remove.sh  start.sh
interface/: adp_bridge.cc  adp_bridge.h  filesystem.h  log_reader.cc  log_reader.h  mailbox.h
map_converter/: README.md  convert_map.py  custom_map_converter.py
